# NextSSL

./: .gitignore  AFTER_BURN.html  ALGO.md  ALGORITHM.html  ALGORITHM.md  ALGO_LIST.md  ALGO_THRESHHOLD.md  BINARY.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  COLLECTION.md  CONTRIBUTING.md  CRYPTO_INVENTORY.md  FLOW.md  GOAL.md  MAP.md  MISSING.md  PLAN.md  README.md  SECURITY.md  SOURCE.md  SOURCE_REFIX.md  SOURCE_REGISTRY.html  TEST_FLOW.md  algo.json  algo_type_table.md  algo_with_num.txt  build.py  cleaner.py  clone_all_repos.sh  requirements.txt  roll_checksum.py  run.py  runner.py  test.py  test_blake3.c  x.json
.github/workflows/: action_bins.yml  action_bins.yml.old  build-variant.yml  build.yml  ci.yml  publish_python.yml  test-variant.yml  test.yml
KAT/: GOAL.md  RULE.md
KAT/data/: kat_base.py
KAT/data/encoding/: __init__.py  base16.py  base32.py  base64.py  base64url.py  bech32.py  crc32.py  crc64.py  pem.py
KAT/data/hash/: argon2d.py  argon2i.py  argon2id.py  blake2b.py  blake2s.py  blake3.py  has160.py  kmac128.py  kmac256.py  makwa.py  md2.py  md5.py  ripemd128.py  ripemd160.py  scrypt.py  sha224.py  sha256.py  sha3-256.py  sha3-384.py  sha3-512.py  sha384.py  sha512-224.py  sha512-256.py  shake128.py  skein256.py  skein512.py  sm3.py  whirlpool.py
KAT/data/modern/: aes-cfb.py  aes-ctr.py  aes-ecb.py  aes-fpe.py  aes-gcm-siv.py  aes-kw.py  aes-ocb.py  aes-xts.py  ed25519.py  ed448.py  hmac.py  p-256.py  p-384.py  p-521.py  siphash.py  sm2.py  x25519.py  x448.py
KAT/data/pqc/: falcon-1024.py  falcon-512.py  falcon-padded-1024.py  hqc-192.py  ml-dsa-44.py  ml-kem-1024.py  ml-kem-768.py  sphincs-sha2-128s.py  sphincs-shake-128f.py  sphincs-shake-128s.py  sphincs-shake-192f.py  sphincs-shake-192s.py  sphincs-shake-256f.py
docs/: README.md
docs/api/: DHCM.md  FUNCTIONS.md  PROFILES.md  README.md  ROOT.md
docs/dev/: ADDING_MODULE.md  PLATFORM.md  README.md
docs/rule/: README.md
docs/src/: LAYERS.md  MODULES.md  PRIMITIVES.md  README.md
docs/test/: README.md
libs/: README.md
libs/python/: API_REFERENCE.md  LICENSE  README.md  pyproject.toml  setup.py
libs/python/src/nextssl/: __init__.py  _api.py  _loader.py  dhcm.py  encoding.py  hash.py  hash_complete.py  kdf.py  pow.py
libs/python/src/nextssl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libs/python/src/nextssl/pqc/: __init__.py  kem.py  kem_complete.py  sign.py  sign_complete.py
libs/python/src/nextssl/primitives/: __init__.py  aes.py  cipher.py  ecc.py  ecc_complete.py  mac.py  mac_complete.py
libs/python/src/nextssl/root/: __init__.py
libs/python/src/nextssl/unsafe/: __init__.py
libs/python/tests/: __init__.py  main.py  test_all.py  test_basic.py  verify_install.py
libs/python/tests/utils/: __init__.py  common.py  test_cipher.py  test_dhcm.py  test_ecc.py  test_encoding.py  test_hash.py  test_kdf.py  test_mac.py  test_pow.py  test_pqc_kem.py  test_pqc_sign.py  test_root.py  test_unsafe.py
libs/python/tools/: release_meta.py  version.py
logs/android/: SUMMARY.txt
logs/android/arm64-v8a/: env.txt  job_info.txt
logs/android/armeabi-v7a/: env.txt  job_info.txt
logs/android/x86/: env.txt  job_info.txt
logs/android/x86_64/: artifacts.txt  env.txt  job_info.txt
logs/ios/: SUMMARY.txt
logs/ios/device-arm64/: artifacts.txt  env.txt  job_info.txt
logs/ios/sim-arm64/: env.txt  job_info.txt
logs/ios/sim-x86_64/: artifacts.txt  env.txt  job_info.txt
logs/latest/: RUN_INFO.txt
logs/latest/logs-win-arm64/: job_info.txt
logs/latest/logs-win-x86/: env.txt  job_info.txt
logs/latest/logs-win-x86_64/: env.txt
logs/linux/: SUMMARY.txt  job_info.txt
logs/linux-glibc/: SUMMARY.txt
logs/linux-glibc/arm64/: artifacts.txt  env.txt  job_info.txt
logs/linux-musl/: SUMMARY.txt
logs/macos/: SUMMARY.txt
logs/wasm/: SUMMARY.txt
logs/win/: SUMMARY.txt
note/: PreRelease_0_0_1.md  STEP_1_REVISED.md  v0_0_1.md  vBeta.md
script/: reactor.py
script/ci/: __init__.py  commit_parser.py  gen_dev_tag.py  update_release_index.py
script/core/: __init__.py  builder.py  config.py  console.py  dependency_resolver.py  load.py  logger.py  platform.py  test_catalog.py
script/logic/: __init__.py  matrix.py  parser.py  registry.py  reporter.py  resolver.py  validator.py
script/web/: _base.py  core.py  dhcm.py  hash.py  pow.py  pqc.py  system.py  system_lite.py
site/: .user.ini  DESIGN.md  index.php  sitemap.xml
site/.backup/: index.php
site/algo/: detail.php  index.php
site/api/: RULE.md  detail.php  index.php
site/common/: cache.php  resp.php
site/extension/: footer.php  header.php
site/static/: algo.js  algo_browser.js  data.js  site.js  style.css  uuid_map.js
src/: config.h  pow_client.c  pow_server.c
src/PQCrypto/: interface_kem.h  interface_sign.h  pqc_main.c
src/PoW/: mock_deps.c  pow_api.c
src/common/: secure_zero.h
src/config/: config.c  config.h
src/encoding/: base16.h  base32.c  base32.h  base58.h  base58check.c  base58check.h  base62.h  base64.c  base64.h  base64url.c  base64url.h  base85.h  bech32.c  bech32.h  crc32.h  crc64.h  ff70.c  ff70.h  hex.h  pem.c  pem.h  radix_common.h
src/include/: crypto_core.h
src/interfaces/: visibility.h
src/modern/: base_encryption.c
src/pow/: dispatcher.c  dispatcher.h  pow_api.c  pow_config.h  pow_engine.c  pow_engine.h
src/pqc/: pqc_main.c
src/primitives/: base_encryption.c
src/root/: nextssl.h  nextssl_export.h  nextssl_init.c
src/seed/: keygen.c  keygen.h
src/utils/: ahs_argon.c  ahs_argon.h  base_encryption.c  pqc_main.c  secure_memory.h  wasm_selftest.c  wasm_tests.c
test/: __init__.py  conftest.py  run_tests.py  smoke.py  test_python.py  variants.py  wasm_runner.mjs  wasm_selftest.c
test/full/: __init__.py  run_full.py
test/kat/: __init__.py
test/mass/: __init__.py  header_check.py  run_mass.py  smoke_kat.py
test/proposal/: LARGE.md  MEDIUM.md  SMALL.md
test/python/: __init__.py  conftest.py  test_cipher.py  test_hash.py  test_info.py  test_kdf.py  test_lifecycle.py  test_password.py  test_random.py  test_utils.py
tests/utils/: __init__.py  common.py
(+2288 files in other folders)
