[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nextssl"
version = "0.0.1"
description = "NextSSL — Python bindings for the NextSSL cryptographic library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security :: Cryptography",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage   = "https://github.com/QudsLab/NextSSL"
Repository = "https://github.com/QudsLab/NextSSL"
Issues     = "https://github.com/QudsLab/NextSSL/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nextssl = ["lib/*.dll", "lib/*.so", "lib/*.dylib", "py.typed"]

# Tests live at the repo root under test/ and are run from there.
# See test/conftest.py and test/python/ for the full test suite.
[tool.pytest.ini_options]
testpaths = ["../../test"]
